--- a/public/stylesheets/payroll/manage_payroll.css
+++ b/public/stylesheets/payroll/manage_payroll.css
@@ -17,11 +17,10 @@
 .payroll-field-pair label {
     color: #444;
     display: block;
-    margin: 0 0 0px 0;
+    margin: 0;
     float: left;
     width: 220px;
     padding-top: 10px;
-    font-weight: 600;
     font-weight: bold;
 }
 #page-yield .payroll-input-bg input:focus {
