--- a/app/views/employee/change_reporting_manager.erb
+++ b/app/views/employee/change_reporting_manager.erb
@@ -37,13 +37,13 @@
       <div id="current-changed-manager">
         <div id="current-manager-outer">
           <div id="current-manager"><%= t('current_manager') %>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:</div>
-          <div id="current-manager-name"><%= @reporting_manager %></div>
+          <div id="current-manager-name" class="themed_text"><%= @reporting_manager %></div>
           <div class="extender"></div>
         </div>
 
         <div id="changed-manager-outer">
           <div id="changed-manager"><%= t('new_manager') %>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:</div>
-          <div id="changed-manager-name"><span class="not-selected">(<%= t('not_selected') %>)</span></div>
+          <div id="changed-manager-name" class="themed_text"><span class="not-selected">(<%= t('not_selected') %>)</span></div>
           <div id="update-button"><%= submit_tag "► #{t('save')}",:class=>"submit_button" %></div>
           <div class="extender"></div>
         </div>
