--- a/app/views/employee_attendance/_individual_leave_applications.erb
+++ b/app/views/employee_attendance/_individual_leave_applications.erb
@@ -17,7 +17,7 @@
 #specific language governing permissions and limitations
 #under the License. -%>
 
-<div class="heading"><%= t('my_leave_applications') %></div>
+<div class="heading themed_text"><%= t('my_leave_applications') %></div>
 <% unless @applied_leaves == [] %>
   <table id="listing" align="center" width="100%" cellpadding="1" cellspacing="1">
     <tr class="tr-head">
