style issue fixed, fixes #3564
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3837 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/employee_attendance/_all_employee_new_leave_applications.erb
+++ b/app/views/employee_attendance/_all_employee_new_leave_applications.erb
@@ -17,7 +17,7 @@
 #specific language governing permissions and limitations
 #under the License. -%>
 
-<div class="heading<%= t('new_application_from_employees') %></div>
+<div class="heading themed_text"><%= t('new_application_from_employees') %></div>
 
 <div class="container-head">
 <div id="name-label"><%= t('name') %></div>
