--- a/app/views/employee_attendance/_new_leave_applications.erb
+++ b/app/views/employee_attendance/_new_leave_applications.erb
@@ -17,7 +17,7 @@
 #specific language governing permissions and limitations
 #under the License. -%>
 
-<div class="heading"><%= t('new_applications_from_employee') %></div>
+<div class="heading themed_text"><%= t('new_applications_from_employee') %></div>
 <table id="listing" width="100%">
   <tr class="tr-head">
     <td><%= t('name') %></td>
