style issue fixed, fixes #3564
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3838 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/employee_attendance/own_leave_application.erb
+++ b/app/views/employee_attendance/own_leave_application.erb
@@ -68,7 +68,7 @@
     </ul>
 
     <%= link_to "► #{t('cancel_leave')}",
-      {:action => "cancel_application", :id=>@applied_leave.id}, :class=>'cancel_button' ,:confirm=>"#{t('delete_confirm_msg')}" if (@applied_leave.viewed_by_manager == false and @applied_leave.approved == false)%>
+      {:action => "cancel_application", :id=>@applied_leave.id}, :class=>'user_button' ,:confirm=>"#{t('delete_confirm_msg')}" if (@applied_leave.viewed_by_manager == false and @applied_leave.approved == false)%>
 
   </div>
 </div>
