--- a/public/stylesheets/rtl/employee_attendance/own_leave_application.css
+++ b/public/stylesheets/rtl/employee_attendance/own_leave_application.css
@@ -1,6 +1,6 @@
 
 #leave-info{
-    
+
 }
 
 
@@ -58,23 +58,6 @@
     color:black;
     text-decoration:underline;
 }
-
-
-.cancel_button {
-    padding: 7px 10px;
-    color: #fff;
-    background: #27292B;
-    -moz-border-radius:10px;
-    -webkit-border-radius:10px;
-    font-weight: bold;
-    font-size: 14px;
-    border:none;
-    font-family: arial;
-    cursor:pointer;
-    margin: 1 447px;
-    text-decoration: none;
-    margin-left: 455px;
-}
-.cancel_button:hover{
-    background:  #373B3F;
+.user_button {
+    margin: 0 455px 0 0;
 }
