style issue fixed, fixes #3564
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3840 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/public/stylesheets/employee_attendance/leave_application.css
+++ b/public/stylesheets/employee_attendance/leave_application.css
@@ -131,6 +131,7 @@
     font-family: arial;
     cursor:pointer;
     margin-left: 40px;
+    margin-top: 0;
     text-decoration: none;
 }
 .cancel_button a:hover{
