--- a/app/views/employee_attendance/leave_application.erb
+++ b/app/views/employee_attendance/leave_application.erb
@@ -72,10 +72,10 @@
       <% unless @applied_leave.viewed_by_manager == true %>
   <div class="buttons">
       <div class="approve_button">    <%= link_to_remote "► #{t('approve')}",
-             :url => {:action => "approve_remarks", :id=>@applied_leave.id},:class=>'approve_button' %> </div>
+             :url => {:action => "approve_remarks", :id=>@applied_leave.id},:html=> {:class=>'user_button'} %> </div>
 
    <div class="cancel_button"><%= link_to_remote "► #{t('deny')}",
-             :url => {:action => "deny_remarks", :id=>@applied_leave.id},:class=>'cancel_button'  %>
+             :url => {:action => "deny_remarks", :id=>@applied_leave.id},:html=> {:class=>'user_button'}  %>
    </div>
 </div>
         <% end %>
