style issue fixed, fixes #3564
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3843 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/employee/leave_management.erb
+++ b/app/views/employee/leave_management.erb
@@ -119,7 +119,7 @@
 
 
   <div id="application-list">
-    <div class="heading"><%= t('apply_for_a_leave') %></div>
+    <div class="heading themed_text"><%= t('apply_for_a_leave') %></div>
     <% form_for :leave_apply do |l| %>
       <%= error_messages_for :leave_apply %>
       <%= l.hidden_field :employee_id, :value=>@employee.id %>
