style issue fixed, fixes #3564
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3844 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/employee/_leave_list.erb
+++ b/app/views/employee/_leave_list.erb
@@ -19,7 +19,7 @@
 
 
 
-<div class="heading"><%= t('all_leave_records') %></div>
+<div class="heading themed_text"><%= t('all_leave_records') %></div>
 
 <div class="container-head">
   <div id="startdate-label"><%= t('start_date') %></div>
