style issue fixed, fixes #3564
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3847 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/employee_attendances/_attendance_cell.html.erb
+++ b/app/views/employee_attendances/_attendance_cell.html.erb
@@ -21,10 +21,10 @@
 <% @absent = EmployeeAttendance.find_by_employee_id_and_attendance_date(@employee.id, @date) %>
 
 <% unless @absent.nil? %>
-  <%= link_to_remote('X', {:url => edit_employee_attendance_path(@absent), :method => 'get'}, :class=>'absent') %>
+  <%= link_to_remote('X', {:url => edit_employee_attendance_path(@absent), :method => 'get'}, :class=>'absent themed_text') %>
 <% else %>
   <%= link_to_remote('O',
     {:url => {:controller =>'employee_attendances', :action => 'new', :id=> @date, :id2 => @employee.id}}, :class=> 'present') %>
 <% end %>
-<div class="date"><span><%=  @date%> <div> <%= @employee.full_name %></div></span>
+<div class="date"><span class="themed_text"><%=  @date%> <div> <%= @employee.full_name %></div></span>
 </div>
