date issue fixed
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3849 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/employee/_one_click_payslip_date.erb
+++ b/app/views/employee/_one_click_payslip_date.erb
@@ -36,7 +36,7 @@
 
   <div class="label-field-pair">
     <label for="salary_date"><%= t('salary_date') %></label>
-    <div class="text-input-bg"><%= calendar_date_select_tag 'salary_date', I18n.l(Date.today,:format=>:normal),
+    <div class="text-input-bg"><%= calendar_date_select_tag 'salary_date', I18n.l(Date.today,:format=>:default),
             :year_range => 2.years.ago..0.years.from_now %></div>
   </div>
   <div class="extender"></div>
