--- a/app/views/employee_attendance/leave_reset_settings.erb
+++ b/app/views/employee_attendance/leave_reset_settings.erb
@@ -61,7 +61,7 @@
       <div class="label-field-pair">
         <label for="configuration_currency_type"><%= t('count_begin_date') %></label>
         <div class="text-input-bg">
-          <%= calendar_date_select_tag 'configuration[financial_year_start_date]', @last_reset.config_value || @fin_start_date.config_value %>
+          <%= calendar_date_select_tag 'configuration[financial_year_start_date]',  I18n.l(@last_reset.config_value.to_date || @fin_start_date.config_value.to_date,:format=>:default) %>
         </div>
       </div>
       <div id="submit-button">
