--- a/app/views/finance/compare_report.html.erb
+++ b/app/views/finance/compare_report.html.erb
@@ -35,7 +35,7 @@
           <%= t('select_start_date') %>:
         </label>
         <div class="text-input-bg">
-          <%= calendar_date_select_tag 'start_date', I18n.l(Date.today,:format=>"%e-%m-%Y") ,:popup=>:force%>
+          <%= calendar_date_select_tag 'start_date', I18n.l(Date.today,:format=>:default) ,:popup=>:force%>
         </div>
       </div>
       <div class="label-field-pair">
@@ -43,7 +43,7 @@
           <%= t('select_end_date') %>:
         </label>
         <div class="text-input-bg">
-          <%= calendar_date_select_tag 'end_date',I18n.l(Date.today,:format=>"%e-%m-%Y") ,:popup=>:force%>
+          <%= calendar_date_select_tag 'end_date',I18n.l(Date.today,:format=>:default) ,:popup=>:force%>
         </div>
       </div>
     <h4><%= t('compare_with') %> </h4>
