--- a/app/views/finance/compare_report.html.erb
+++ b/app/views/finance/compare_report.html.erb
@@ -52,7 +52,7 @@
           <%= t('select_start_date') %>:
         </label>
         <div class="text-input-bg">
-          <%= calendar_date_select_tag 'start_date2', I18n.l(Date.today,:format=>"%e-%m-%Y") ,:popup=>:force%>
+          <%= calendar_date_select_tag 'start_date2', I18n.l(Date.today,:format=>:default) ,:popup=>:force%>
         </div>
       </div>
       <div class="label-field-pair">
@@ -60,7 +60,7 @@
           <%= t('select_end_date') %>:
         </label>
         <div class="text-input-bg">
-          <%= calendar_date_select_tag 'end_date2', I18n.l(Date.today,:format=>"%e-%m-%Y") ,:popup=>:force%>
+          <%= calendar_date_select_tag 'end_date2', I18n.l(Date.today,:format=>:default) ,:popup=>:force%>
         </div>
       </div>
           <%=  submit_tag "► #{t('get_report')}",:class=>'submit_button' %>
