--- a/app/views/employee/_list_payslip_category.erb
+++ b/app/views/employee/_list_payslip_category.erb
@@ -26,7 +26,7 @@
     <li class="new_category">
 
       <div class="name"><%= c.name %></div>
-      <div class="val"> <span>:</span><%= c.amount %></div>
+      <div class="val themed_text"> <span>:</span><%= c.amount %></div>
       <div class="del-button"> <%= link_to_remote image_tag("/images/buttons/delete-new.png", :alt=>'Delete', :border => 0), :url => { :action => "remove_new_paylist_category", :id => c.id, :id3=>CGI::unescape(@salary_date) },
           :update => "list-payslip-category", :confirm=>"#{t('delete_confirm_msg')}" %></div>
     </li>
@@ -35,7 +35,7 @@
     <li class="new_category">
 
       <div class="name"><%= c.name %></div>
-      <div class="val"> <span>:</span><%= c.amount %></div>
+      <div class="val themed_text"> <span>:</span><%= c.amount %></div>
       <div class="del-button"> <%= link_to_remote image_tag("/images/buttons/delete-new.png", :alt=>'Delete', :border => 0), :url => { :action => "remove_new_paylist_category", :id => c.id, :id3 =>CGI::unescape(@salary_date) },
           :update => "list-payslip-category", :confirm=>"#{t('delete_confirm_msg')}" %></div>
     </li>
