--- a/public/stylesheets/cce_reports/create_reports.css
+++ b/public/stylesheets/cce_reports/create_reports.css
@@ -81,7 +81,11 @@
 }
 .submit-button{
     margin-top: 20px;
+    padding: 7px 10px;
+    -webkit-border-radius: 12px;
+    border-radius: 12px;
+    -moz-border-radius: 12px;
 }
 .bread_crumb {
- margin-left: 10px;
+    margin-left: 10px;
 }
