--- a/app/views/configuration/settings.html.erb
+++ b/app/views/configuration/settings.html.erb
@@ -105,7 +105,7 @@
         </div>
       </div>
       <div class="label-field-pair">
-        <label for="configuration_currency_type"><%= t('upload_logo') %></label>
+        <label for="configuration_currency_type"><%= t('upload_logo') %> (<%= t('max_size') %>)</label>
         <div class="text-input-bg">
           <%= file_field 'school_detail','school_logo', :size=>12 %>
         </div>
