--- a/app/views/employee/admission1.erb
+++ b/app/views/employee/admission1.erb
@@ -197,7 +197,7 @@
       </script>
 
       <div class="label-field-pair">
-        <label for="master_student_image_file"><%= t('upload_photo') %></label>
+        <label for="master_student_image_file"><%= t('upload_photo') %> (<%= t('max_size') %>)</label>
         <div class="text-input-bg"><%= a.file_field :photo, :size=>12 %></div>
 
       </div>
