--- a/app/views/finance/pay_fees_defaulters.html.erb
+++ b/app/views/finance/pay_fees_defaulters.html.erb
@@ -58,7 +58,7 @@
         <tr class="tr-blank"></tr>
         <% @fee_particulars.each do |fee| %>
           <tr class="tr-<%= cycle("odd","even") %>">
-            <td class="col-1"><%= i+1 %></td>
+            <td class="col-1"><%= i+=1 %></td>
             <td class="col-2"><%= fee.name %></td>
             <td class="col-6"><%= fee.amount%></td>
           </tr>
