--- a/app/views/user/login.html.erb
+++ b/app/views/user/login.html.erb
@@ -22,6 +22,7 @@
     <%= image_tag current_school_detail.logo.url %>
   </div>
 
+  <div id="login_strip"></div>
   <div id="login_area_bg">
 
     <% form_for :user do |form| %>
