forgot password page style changed
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3872 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/user/forgot_password.erb
+++ b/app/views/user/forgot_password.erb
@@ -22,6 +22,7 @@
   <div id="top_logo">
     <%= image_tag current_school_detail.logo.url %>
   </div>
+    <div id="login_strip"></div>
   <% if @network_state.config_value.to_s == "Online" %>
     <div id="login_area_bg">
 
@@ -42,8 +43,8 @@
           <% end %>
 
         </div>
-      </div>
-    <% end %>
+      <% end %>
+    </div>
   <% else %>
     <div id="login_area_bg">
       <div id="login_area">
