set new password page style changed
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3878 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/user/set_new_password.erb
+++ b/app/views/user/set_new_password.erb
@@ -22,6 +22,8 @@
   <div id="top_logo">
     <%= image_tag current_school_detail.logo.url %>
   </div>
+
+  <div id="login_strip"></div>
   <div id="login_area_bg">
 
     <% form_for :set_new_password do |u| %>
@@ -47,8 +49,8 @@
         <% end %>
 
       </div>
-    </div>
-  <% end %>
+    <% end %>
+  </div>
 </div>
 
 <div id="help_forgot_pw">
