style issue fixed in settings page
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3883 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/public/stylesheets/configuration/settings.css
+++ b/public/stylesheets/configuration/settings.css
@@ -57,4 +57,10 @@ width:198px;
 }
 .label-field-pair {
     overflow: hidden;
+    height: auto;
+    margin-bottom: 10px;
+}
+.text-input-bg{
+    height: auto;
+    overflow: hidden;
 }
