--- a/app/views/exam/create_exam.html.erb
+++ b/app/views/exam/create_exam.html.erb
@@ -43,7 +43,7 @@
       </label>
       <div class="text-input-bg">
         <%= select :courses, :name,
-          @course.map {|b| [b.code, b.id]},
+          @course.map {|b| [b.full_name, b.id]},
           {:prompt => "#{t('select_a_course')}"},
           {:onChange => "#{remote_function(:url => {:action => "update_batch"},
           :with => "'course_name='+ value",
