confirm message added before destroy
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3902 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/finance/_master_category_list.html.erb
+++ b/app/views/finance/_master_category_list.html.erb
@@ -42,7 +42,7 @@
         <td class="col-7">
           <div class="options">
             <%  unless fees.check_fee_collection == false %>
-              <span class="small"> <%= link_to_remote t('delete_text'), :url => { :action => 'master_category_delete',:id => fees.id} %></span>
+              <span class="small"> <%= link_to_remote t('delete_text'),:confirm=>"#{t('delete_confirm_msg')}", :url => { :action => 'master_category_delete',:id => fees.id} %></span>
             <% else %>
               <span class="small-strike"><%= t('delete_text') %></span>
             <% end %>
