employee cant take class to multiple batches at a time, fixes #3660
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3906 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/timetable_entries/_new_entry.html.erb
+++ b/app/views/timetable_entries/_new_entry.html.erb
@@ -126,10 +126,21 @@
           <%= err -%>
         <%- end -%>
         - On <%= Date::DAYNAMES[Weekday.find(weekday).day_of_week].capitalize %> (<%= ClassTiming.find(class_timing).name -%>)
-        <%= link_to_remote "#{t('continue')}", :url=> {:action=> "tt_entry_update2"},
-          :with   => "'&sub_id=#{errors["info"]["sub_id"]}' + '&tte_id=#{errors["info"]["tte_id"]}' + '&emp_id=#{errors["info"]["emp_id"]}' + '&timetable_id=#{@tt.id}' + '&batch_id=#{@batch.id}'",
-          :before => "Element.show('loader')",
-          :success => "Element.hide('loader')" -%> |
+        <% unless @overlap.nil? %>
+          <%= link_to_remote "#{t('override')}", :url=> {:action=> "tt_entry_update2"},
+            :with   => "'&sub_id=#{errors["info"]["sub_id"]}' + '&tte_id=#{errors["info"]["tte_id"]}' + '&emp_id=#{errors["info"]["emp_id"]}' + '&timetable_id=#{@tt.id}' + '&batch_id=#{@batch.id}&overwrite=1'",
+            :before => "Element.show('loader')",
+            :success => "Element.hide('loader')" -%> |
+          <%= link_to_remote "#{t('retain_all')}", :url=> {:action=> "tt_entry_update2"},
+            :with   => "'&sub_id=#{errors["info"]["sub_id"]}' + '&tte_id=#{errors["info"]["tte_id"]}' + '&emp_id=#{errors["info"]["emp_id"]}' + '&timetable_id=#{@tt.id}' + '&batch_id=#{@batch.id}'",
+            :before => "Element.show('loader')",
+            :success => "Element.hide('loader')" -%>
+        <% else %>
+          <%= link_to_remote "#{t('continue')}", :url=> {:action=> "tt_entry_update2"},
+            :with   => "'&sub_id=#{errors["info"]["sub_id"]}' + '&tte_id=#{errors["info"]["tte_id"]}' + '&emp_id=#{errors["info"]["emp_id"]}' + '&timetable_id=#{@tt.id}' + '&batch_id=#{@batch.id}'",
+            :before => "Element.show('loader')",
+            :success => "Element.hide('loader')" -%>
+        <% end %> |
         <%= link_to_remote "#{t('cancel')}", :url=>{:action=>"tt_entry_noupdate2"},
           :before => "Element.show('loader')",
           :success => "Element.hide('loader')",
