date changed to readonly, fixes #3683
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3912 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/exams/new.html.erb
+++ b/app/views/exams/new.html.erb
@@ -52,11 +52,11 @@
         </div>
         <div class="label-field-pair">
           <label for="subject_start_time"><%= t('start_time') %><span class="necessary-field">*</span></label>
-          <div class="text-input-bg"> <%= f.calendar_date_select :start_time %></div>
+          <div class="text-input-bg"> <%= f.calendar_date_select :start_time,:readonly=>true,:popup=>"force" %></div>
         </div>
         <div class="label-field-pair">
           <label for="subject_end_time"><%= t('end_time') %><span class="necessary-field">*</span></label>
-          <div class="text-input-bg"> <%= f.calendar_date_select :end_time %></div>
+          <div class="text-input-bg"> <%= f.calendar_date_select :end_time,:readonly=>true,:popup=>"force" %></div>
         </div>
         <div class="label-field-pair">
           <label for="subject_maximum_marks"><%= t('max_mark') %><span class="necessary-field">*</span></label>
