--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,7 +44,15 @@
     <% CalendarDateSelect.format = :iso_date %>
 
     <%= javascript_include_tag "calendar_date_select/locale/#{I18n.locale}.js" unless I18n.locale==:en %>
+    <%= javascript_include_tag 'fedena_plugin.js'%>
     <%= yield :head %>
+
+    <script type="text/javascript">
+      document.observe("dom:loaded", function() {
+        render_generic_hook(<%= render_generic_hook %>)
+      });
+    </script>
+    
     <%= javascript_include_tag 'jquery/jquery.min.js' %>
     <%= javascript_include_tag 'jquery/jquery-ui.min.js'%>
     <%= javascript_include_tag 'jquery/jquery.hotkeys.js'%>
