--- a/public/stylesheets/timetable/teachers_timetable.css
+++ b/public/stylesheets/timetable/teachers_timetable.css
@@ -4,21 +4,21 @@
     border-radius: 8px;
 }
 #teacher{
-border-right: none;
-width: 150px;
-border-top-right-radius: 0px;
-border-bottom-right-radius: 0px;
+    border-right: none;
+    width: 150px;
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 0px;
 }
 #timetable{
-border-top-left-radius: 0px;
-border-bottom-left-radius: 0px;
-border-left: none;
-padding-left: 0px;
+    border-top-left-radius: 0px;
+    border-bottom-left-radius: 0px;
+    border-left: none;
+    padding-left: 0px;
 }
 #timetable-container{
     font-weight: bold;
-/*    height: 450px;*/
-/*    overflow-y: scroll;*/
+    /*    height: 450px;*/
+    /*    overflow-y: scroll;*/
 }
 .batch{
     height: 80px;
@@ -32,6 +32,7 @@ padding-left: 0px;
 } 
 #timetable td{
     text-align: center;
+    min-width: 70px;
 }
 #period-count{
     background-color: #fff;
@@ -51,10 +52,11 @@ padding-left: 0px;
     font-weight: bold;
     font-size: 12px;
     background-color: #fff;
-    min-width: 70px;
+    width: 70px;
+    max-width: 70px;
 }
 #table-viewer{
-/*    height:480px;*/
+    /*    height:480px;*/
     margin-left: 0px;
     overflow-x: scroll;
     width: 810px;
@@ -67,4 +69,26 @@ padding-left: 0px;
 }
 .employee_list{
     float: left;
+}
+.tte .entries_wrapper{
+    display: none;
+    margin-left: 90px;
+    min-width: 100px;
+}
+.tte:hover .entries_wrapper{
+    display: block;
+    position: relative;
+    z-index: 2000;
+    height: 0;
+}
+.tte:hover .entries_wrapper .entries{
+    background-color: white;
+    border: 4px solid #C3D9FF;
+    padding: 5px;
+    -moz-border-radius: 8px;
+    -webkit-border-radius: 8px;
+    padding-top: 10px;
+    font-weight: bold;
+    font-size: 12px;
+    font-variant: small-caps;
 }
