Issue[#3690] - News panel to be shown only in User#dashboard
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3918 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -90,7 +90,7 @@
       <div id="side_bar">
 
         <div id="sidebar_news_area">
-          <% if action_name == "dashboard" %>
+          <% if action_name == "dashboard" && controller_name == "user"%>
             <%= link_to " ", { :controller => "news", :action => "index" }, :id => 'news_feed_top_img' %>
             <div id="news_feed">
               <% @dash_news.each do |n| %>
