theme style issue fix in exam
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3921 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/exam/_grouped_exam_report.erb
+++ b/app/views/exam/_grouped_exam_report.erb
@@ -183,7 +183,7 @@
 <% end %>
 <% if @previous_batch == 1 %>
 <%= link_to " ► #{t('pdf_report')}",
-  { :action => "generated_report4_pdf", :batch_id => @batch.id, :student=>@student.id, :type=> @type},:target => '_blank', :class=> 'user_button1' %>
+  { :action => "generated_report4_pdf", :batch_id => @batch.id, :student=>@student.id, :type=> @type},:target => '_blank', :class=> 'user_button' %>
 <% else %>
 <%= link_to " ► #{t('pdf_report')}",
   { :action => "generated_report4_pdf", :batch_id => @batch.id, :student=>@student.id, :type=> @type},:target => '_blank', :class=> 'user_button' %>
