--- a/app/views/configuration/settings.html.erb
+++ b/app/views/configuration/settings.html.erb
@@ -64,7 +64,7 @@
       <div class="label-field-pair">
         <label for="configuration_currency_type"><%= t('finance_year_start_date') %></label>
         <div class="text-input-bg">
-          <%= calendar_date_select_tag 'configuration[financial_year_start_date]', @config[:financial_year_start_date],
+          <%= calendar_date_select_tag 'configuration[financial_year_start_date]', I18n.l(@config[:financial_year_start_date].to_date,:format=>:default),
             :year_range => 15.years.ago..5.years.from_now, :readonly=>true, :popup=>"force" %>
         </div>
       </div>
@@ -72,7 +72,7 @@
       <div class="label-field-pair">
         <label for="configuration_currency_type"><%= t('finance_year_end_date') %></label>
         <div class="text-input-bg">
-          <%= calendar_date_select_tag 'configuration[financial_year_end_date]', @config[:financial_year_end_date],
+          <%= calendar_date_select_tag 'configuration[financial_year_end_date]',  I18n.l(@config[:financial_year_end_date].to_date,:format=>:default),
             :year_range => 15.years.ago..5.years.from_now, :readonly=>true, :popup=>"force" %>
         </div>
       </div>
