--- a/app/views/exams/edit.html.erb
+++ b/app/views/exams/edit.html.erb
@@ -18,7 +18,7 @@
 #under the License. -%>
 
 <div id="content-header">
-<%= image_tag("/images/examination/show_exam.png") %>
+  <%= image_tag("/images/examination/show_exam.png") %>
   <h1><%= t('exams_text') %></h1>
   <h3><%= t('edit_exam') %></h3>
   <div id="app-back-button">
@@ -48,7 +48,7 @@
     <% form_for [@exam_group, @exam] do |f| %>
       <%= error_messages_for :exam %>
       <div class="label-field-pair">
-          <%= f.label "#{t('subject')}" %>
+        <%= f.label "#{t('subject')}" %>
         <div class="text-input-bg"><%= f.select :subject_id, @subjects.map { |s| [s.name, s.id]} %></div>
       </div>
 
@@ -60,14 +60,16 @@
         <%= f.label "#{t('end_time')}" %>
         <div class="text-input-bg"><%= f.calendar_date_select :end_time,:readonly=>true,:popup=>"force" %></div>
       </div>
-      <div class="label-field-pair">
-        <%= f.label "#{t('max_mark')}" %>
-        <div class="text-input-bg"><%= f.text_field :maximum_marks %></div>
-      </div>
-      <div class="label-field-pair">
-        <%= f.label "#{t('min_mark')}" %>
-        <div class="text-input-bg"><%= f.text_field :minimum_marks %></div>
-      </div>
+      <% unless @exam_group.exam_type=="Grades" %>
+        <div class="label-field-pair">
+          <%= f.label "#{t('max_mark')}" %>
+          <div class="text-input-bg"><%= f.text_field :maximum_marks %></div>
+        </div>
+        <div class="label-field-pair">
+          <%= f.label "#{t('min_mark')}" %>
+          <div class="text-input-bg"><%= f.text_field :minimum_marks %></div>
+        </div>
+      <% end %>
 
 
       <%= submit_tag "", :value => "► #{t('save')}", :class => "submit_button" %>
