--- a/public/stylesheets/student/previous_data_edit.css
+++ b/public/stylesheets/student/previous_data_edit.css
@@ -162,3 +162,10 @@ ul{
     margin-top: -2px;
     margin-left: 5px;
 }
+#added-subjects{
+    width:100%;
+    float: left;
+}
+#added-subjects li {
+    display: block;
+}
