--- a/public/stylesheets/rtl/student/previous_data.css
+++ b/public/stylesheets/rtl/student/previous_data.css
@@ -163,3 +163,10 @@ ul{
     margin-top: -2px;
     margin-right: 5px;
 }
+#added-subjects{
+    width:100%;
+    float: right;
+}
+#added-subjects li {
+    display: block;
+}
