--- a/public/stylesheets/rtl/student/previous_data_edit.css
+++ b/public/stylesheets/rtl/student/previous_data_edit.css
@@ -160,3 +160,10 @@ ul{
     margin-top: -2px;
     margin-right: 5px;
 }
+#added-subjects{
+    width:100%;
+    float: right;
+}
+#added-subjects li {
+    display: block;
+}
