BUG #3706 fixed, style issue fixed, added validates_presence_of :subject, :mark in StudentPreviousSubjectMark model
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3934 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/student/_previous_subject.html.erb
+++ b/app/views/student/_previous_subject.html.erb
@@ -20,20 +20,21 @@
 
 <span class="span-sub-heading"><%= t('subject_details') %></span>
 <% remote_form_for :student_previous_subject_details, :url =>{:action =>'save_previous_subject'} do |s| %>
-<%= s.hidden_field :student_id, :value => @student.id %>
-<div class="label-field-pair">
-  <label><%= t('subject') %></label>
-  <div class="text-input-bg"><%= s.text_field :subject %></div>
-  <div class="extender"></div>
-</div>
-<div class="label-field-pair">
-  <label><%= t('mark') %></label>
-  <div class="text-input-bg"><%= s.text_field :mark %></div>
-  <div class="extender"></div>
-</div>
-<div class="save-proceed-button1" id="save-proceed-button">
-      <%= s.submit "► #{t('save')}"%>
-    </div>
+  <%= s.hidden_field :student_id, :value => @student.id %>
+  <%= error_messages_for 'student_previous_subject_details', :header_message => nil %>
+  <div class="label-field-pair">
+    <label><%= t('subject') %></label>
+    <div class="text-input-bg"><%= s.text_field :subject %></div>
+    <div class="extender"></div>
+  </div>
+  <div class="label-field-pair">
+    <label><%= t('mark') %></label>
+    <div class="text-input-bg"><%= s.text_field :mark %></div>
+    <div class="extender"></div>
+  </div>
+  <div class="save-proceed-button1" id="save-proceed-button">
+    <%= s.submit "► #{t('save')}"%>
+  </div>
 
 <% end %>
 
