avoid color change of marked attendance on hover
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3936 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/public/stylesheets/rtl/attendances/index.css
+++ b/public/stylesheets/rtl/attendances/index.css
@@ -182,7 +182,7 @@ table.table{
 }
 .td-mark:hover,.td-mark:hover a.present{
     background:#C3D9FF;
-    color:#C3D9FF;
+/*    color:#C3D9FF;*/
 }
 .td-name:hover .date span{
     display: block;
